--- a/zoom-clone-basic/package.json
+++ b/zoom-clone-basic/package.json
@@ -2,9 +2,10 @@
   "name": "zoom-clone",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "peer": "^0.5.3",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   },
